base: Add overlay to Enable/Disable Home button wake
* also allow home button to work when non interactive so that i can be used as wake key
* Disabled by default since there are only some users that have home button wake

Co-authored-by: Anushek Prasal <anushekprasal@gmail.com>
Signed-off-by: Joshua Primero <jprimero155@gmail.com>
Signed-off-by: Anushek Prasal <anushekprasal@gmail.com>

--- a/core/res/res/values/colt_config.xml
+++ b/core/res/res/values/colt_config.xml
@@ -175,4 +175,6 @@
          backgrounds -->
     <bool name="config_useDarkBgNotificationIconTextTinting">false</bool>
 
+	<!-- True if your device have home button and want to use it as wake button-->
+    <bool name="config_enableHomeButtonWake">false</bool>
 </resources>
