--- a/core/res/res/values/colt_symbols.xml
+++ b/core/res/res/values/colt_symbols.xml
@@ -234,4 +234,7 @@
        backgrounds -->
     <java-symbol type="bool" name="config_useDarkBgNotificationIconTextTinting" />
 
+    <!-- Home button wake -->
+    <java-symbol type="bool" name="config_enableHomeButtonWake" /> 
+ 
 </resources>
